# cpp-strategy-backtester

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
data/: market_data.csv
include/backtester/: DataSource.hpp  ExecutionHandler.hpp  PortfolioHandler.hpp  PortfolioInterface.hpp  SimulatedExecutionHandler.hpp  Strategy.hpp  Types.hpp
include/backtester/core/: Types.hpp
include/backtester/data/: CsvTickLoader.hpp  DataSource.hpp
include/backtester/execution/: ExecutionHandler.hpp
include/backtester/portfolio/: PortfolioInterface.hpp
include/backtester/strategy/: MeanReversionStrategy.hpp  Strategy.hpp
scripts/: generate_data.py
src/: CMakeLists.txt  CsvTickLoader.cpp  MeanReversionStrategy.cpp  PortfolioHandler.cpp  SimulatedExecutionHandler.cpp  main.cpp
src/data/: CsvTickLoader.cpp
src/execution/: SimulatedExecutionHandler.cpp
src/portfolio/: PortfolioHandler.cpp
src/strategy/: MeanReversionStrategy.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_csv_loader.cpp  test_execution.cpp  test_portfolio.cpp  test_strategy.cpp
